[gd_scene load_steps=3 format=3 uid="uid://cxbvn3k8p7qm4"]

[ext_resource type="Script" path="res://scripts/test/achievement_test.gd" id="1_achievement_test"]
[ext_resource type="PackedScene" uid="uid://b8mxn4pqwv9zy" path="res://scenes/ui/achievements_menu.tscn" id="2_achievements_menu"]

[node name="AchievementTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_achievement_test")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.3, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Achievement System Test"

[node name="Info" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Total: 0 / 0 | Unlocked: 0 (0%)"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Test Actions:"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 12
columns = 3

[node name="UnlockChapter1" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Unlock Chapter 1"

[node name="UnlockBoss" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Defeat Boss"

[node name="Add10Kills" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Add 10 Kills"

[node name="LevelUp" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Level Up (10)"

[node name="UseFormation" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Use Formation"

[node name="CastSpell" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Cast 10 Spells"

[node name="ReachEnding" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Reach Good Ending"

[node name="StartNGPlus" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Start NG+"

[node name="CompleteGame" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Complete Game (Fast)"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ShowMenu" type="Button" parent="MarginContainer/VBoxContainer/ControlButtons"]
layout_mode = 2
text = "Show Achievements Menu"

[node name="ResetAll" type="Button" parent="MarginContainer/VBoxContainer/ControlButtons"]
layout_mode = 2
text = "Reset All Achievements"

[node name="AchievementsMenu" parent="." instance=ExtResource("2_achievements_menu")]
visible = false
